fix: 👷 section name overflow in Vbox

--- a/src/main/resources/assets/css/app.css
+++ b/src/main/resources/assets/css/app.css
@@ -15,7 +15,7 @@
 }
 
 .btn{
-    -fx-font-size: 40;
+    -fx-font-size: 30;
     -fx-background-color: transparent;
     -fx-font-family: "Secular One";
 }
@@ -116,6 +116,11 @@
 .option-container{
     -fx-border-color: lightgrey;
     -fx-border-width: 0px 0px 0px 5px;
+}
+
+.product-element-container{
+    -fx-border-color: lightgrey;
+    -fx-border-width: 0px 0px 0px 3px;
 }
 
 .option-product-element-checkbox{
